2017-02-20 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a typo in 'conf/aman.conf-sample'.
2017-02-20 Fred Gleason <fredg@paravelsystems.com>
	* Refactored 'aman.spec.in' to use 'make install' to populate
	the target image.
2017-02-20 Fred Gleason <fredg@paravelsystems.com>
	* Removed the xinetd(8) dependency for RHEL 7 installs.
2017-02-20 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.10.
2017-04-05 Fred Gleason <fredg@paravelsystems.com>
	* Modified the RestoreMysqlSnapshot() function in
	'amand/restore_snapshot.cpp' and 'amand/set_metadata.cpp' to
	configure DB replication to occur via the Public interface rather
	than the Private one.
	* Modified DB replication testing to use the Public interface rather
	than the Private one.
	* Modified the DB snapshot generation code to attempt snapshot
	transfer via the Public interface before attempting the Private.
	* Added RHEL-7 specific information to 'INSTALL'.
2017-04-05 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'amand/audiostore.cpp' that broke mirror deletion
	of audio.
2017-04-05 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.11.
2017-04-12 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'configure.ac' that caused incorrect RPM dependencies
	to be generated on RHEL-6.
2017-04-12 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.12.
2017-06-01 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Purge Bin Logs' ['PG'] command to amand(8).
	* Rewrote the 'DeleteBinlogSequence()' method in 'amand/auto_rotate.cpp'
	to use the 'PURGE BINARY LOGS' SQL statement.
2017-06-02 Fred Gleason <fredg@paravelsystems.com>
	* Modified log rotation algorithm in amand(8) to do snapshot
	generation and log purging in a single pass.
2017-06-02 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'amand/auto_rotate.cpp' that caused a segfault
	when rotating relay-bin logs.