@@ -24,3 +24,4 @@ Makefile.in
 missing
 moc_*
 rc.amand
+tests/sqltorture
