@@ -269,3 +269,5 @@
 2017-06-02 Fred Gleason <fredg@paravelsystems.com>
 	* Fixed a bug in 'amand/auto_rotate.cpp' that caused a segfault
 	when rotating relay-bin logs.
+2017-06-05 Fred Gleason <fredg@paravelsystems.com>
+	* Added sqltorture(1) in 'tests/'.
